# NBAPlayerStatsPredictor

./: .defensive_ratings_cache.json  .gitignore  GAME_PREDICTOR_PLAN.md  HybridHMMApproach.ipynb  NonHMMSolution.ipynb  RAG_IMPLEMENTATION_PLAN.md  README.md  app.py  bracket_backup.json  bracket_mockup.html  bracket_prototype.py  debug_h2h_scores.py  debug_mvp_ladder.py  find_rank_4.py  nbacoaches.csv  newapp.py  packages.txt  pyproject.toml  requirements.txt  requirementsNew.txt  test_actual_scraping.py  test_ladder_scraping.py
.agent/: instructions.md  spec.md
.github/workflows/: daily_awards_update.yml
.streamlit/: secrets.toml.template
data/: awards_odds.json
docs/: AI_AGENT_INTEGRATION.md
scripts/: check_nba_api.py  test_v1_11_4.py  update_awards_odds.py  update_coaches.py  verify_live_data.py
src/auth/: google_oauth.py
src/database/: base.py  sqlite_backend.py
src/logic/: model.py
src/ui/: components.py
