[project]
name = "basketballapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "hmmlearn>=0.3.0",
    "matplotlib>=3.7.0",
    "nba-api>=1.4.0",
    "nbainjuries>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "playwright>=1.57.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0",
    "streamlit-google-auth>=1.0.0",
]
