[project]
name = "basketballapp"
version = "0.1.0"
description = "NBA Live Stats Predictor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "nba-api>=1.11.4",
    "hmmlearn>=0.3.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.90.0",
    "beautifulsoup4>=4.12.0",
    "pytz>=2023.3",
    "playwright>=1.40.0",
]
